; ModuleID = '/home/carl/AnghaBench/lwan/src/lib/extr_lwan.c_sigint_handler.c'
source_filename = "/home/carl/AnghaBench/lwan/src/lib/extr_lwan.c_sigint_handler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@main_socket = common dso_local global i32 0, align 4
@SHUT_RDWR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @sigint_handler to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sigint_handler(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* @main_socket, align 4
  %4 = icmp slt i32 %3, 0
  br i1 %4, label %5, label %6

5:                                                ; preds = %1
  br label %12

6:                                                ; preds = %1
  %7 = load i32, i32* @main_socket, align 4
  %8 = load i32, i32* @SHUT_RDWR, align 4
  %9 = call i32 @shutdown(i32 %7, i32 %8)
  %10 = load i32, i32* @main_socket, align 4
  %11 = call i32 @close(i32 %10)
  store i32 -1, i32* @main_socket, align 4
  br label %12

12:                                               ; preds = %6, %5
  ret void
}

declare dso_local i32 @shutdown(i32, i32) #1

declare dso_local i32 @close(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
